restservice-chart/templates/books-api/restservice-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: restservice-api
    app.kubernetes.io/component: restservice-api
    app.kubernetes.io/instance: restservice-api
  name: restservice-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: restservice-api
  sessionAffinity: None
  type: ClusterIP
