restservice-chart/templates/books-api/restservice-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: restservice-api
    app.kubernetes.io/component: restservice-api
    app.kubernetes.io/instance: restservice-api
  name: restservice-api
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: restservice-api
    weight: 100
  wildcardPolicy: None
